[package]
name = "python_target_lib"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "control_pad_target"
crate-type = ["cdylib"]

[dependencies]
CPServ = { path = "../CPServ" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"



[dependencies.cpython]
version = "*"

